--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 /*-----共通部分-----*/
+@media(max-width:1100px){
 html {
     font-size:100%;
 }
@@ -15,7 +16,7 @@ a {
 img {
     max-width:100%;
 } 
-
+}
 
 /*---top page---*/
 .container h1 {
